tests/ui/array-slice-vec/match_arr_unknown_len.stderr
error[E0308]: mismatched types
  --> $DIR/match_arr_unknown_len.rs:3:9
   |
LL |         [1, 2] => true,
   |         ^^^^^^ expected an array with a size of 2, found one with a size of N

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0308`.
